<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/insert_data"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/key_title"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/title"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/key"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/data_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/key_title" />

    <TextView
        android:id="@+id/value_title"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/key_title"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/value"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/data_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_key"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/value_title" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_value"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_value"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/confirm" />

</RelativeLayout>